css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html {
  font-size: 62.5%;
}

body {
  font-family: 'Public Sans', sans-serif;
  color: hsl(233, 26%, 24%);
  font-size: 1.6rem;
}

body.noscroll {
  overflow: hidden;
}

a,
a:visited,
a:hover {
  text-decoration: none;
}

.container {
  max-width: 1000px;
  width: 100%;
  margin: auto;
}

/* Flex */
.flex {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.flex-jc-sb {
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.flex-jc-c {
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.flex-ai-c {
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

/* Button */
.button {
  font-size: 1.6rem;
  display: inline-block;
  padding: 1.4rem 3rem;
  border-radius: 50px;
  cursor: pointer;
  border: none;
  font-weight: 400;
  background: -webkit-gradient(
    linear,
    left top,
    right top,
    from(#31d35c),
    to(#2bb7da)
  );
  background: linear-gradient(to right, #31d35c, #2bb7da);
  color: white;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

button:hover,
.button:hover {
  opacity: 0.75;
}

@media (max-width: 63.9375em) {
  .hide-for-mobile {
    display: none;
  }
}

@media (min-width: 64em) {
  .hide-for-desktop {
    display: none;
  }
}

/*===========*\
  Nav
\*===========*/

.header {
  z-index: 10;
  position: sticky;
  width: 100%;
  top: 0;
  background-color: white;
  padding: 0 5%;
}

.header nav {
  height: 70px;
  background: white;
}

.header__logo img {
  width: 14rem;
  height: 4rem;
  object-fit: scale-down;
}

.header__toggle > span {
  display: block;
  width: 26px;
  height: 2px;
  background-color: #2d314d;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  -webkit-transform-origin: 3px 1px;
  transform-origin: 3px 1px;
}

.header__toggle > span:not(:last-child) {
  margin-bottom: 5px;
}

.header__menu {
  position: absolute;
  width: calc(100% - 3rem);
  margin-top: calc(2rem + 5px + 1.5rem);
  background: white;
  left: 50%;
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
  border-radius: 5px;
  padding: 1.625rem;
}

.header__menu a {
  color: #2d314d;
  padding: 1rem;
  display: block;
  text-align: center;
}

.header__links {
  height: 100%;
}

.header__links a {
  position: relative;
  display: flex;
  align-items: center;
  -webkit-transition: color 300ms ease-in-out;
  transition: color 300ms ease-in-out;
  font-size: 1.6rem;
  color: #9698a6;
  padding: 0 2rem;
}

.header__links a::before {
  content: '';
  display: block;
  position: absolute;
  height: 5px;
  width: calc(100% - 4rem);
  bottom: 0px;
  background: -webkit-gradient(
    linear,
    left top,
    right top,
    from(#31d35c),
    to(#2bb7da)
  );
  background: linear-gradient(to right, #31d35c, #2bb7da);
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.header__links a:hover {
  color: #2d314d;
}

.header__links a:hover::before {
  opacity: 1;
}

.header.open .header__toggle > span:first-child {
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
}

.header.open .header__toggle > span:nth-child(2) {
  opacity: 0;
}

.header.open .header__toggle > span:last-child {
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.overlay {
  opacity: 0;
  visibility: hidden;
  position: fixed;
  background-image: -webkit-gradient(
    linear,
    left top,
    left bottom,
    from(#2d314d),
    to(transparent)
  );
  background-image: linear-gradient(#2d314d, transparent);
  top: 7rem;
  right: 0;
  bottom: 0;
  left: 0;
}

.has-fade {
  visibility: hidden;
}

@-webkit-keyframes fade-in {
  from {
    visibility: hidden;
    opacity: 0;
  }
  1% {
    visibility: visible;
    opacity: 0;
  }
  to {
    opacity: 1;
    visibility: visible;
  }
}

@keyframes fade-in {
  from {
    visibility: hidden;
    opacity: 0;
  }
  1% {
    visibility: visible;
    opacity: 0;
  }
  to {
    opacity: 1;
    visibility: visible;
  }
}

.fade-in {
  -webkit-animation: fade-in 300ms ease-in-out forwards;
  animation: fade-in 300ms ease-in-out forwards;
}

@-webkit-keyframes fade-out {
  from {
    visibility: visible;
    opacity: 1;
  }
  99% {
    visibility: visible;
    opacity: 0;
  }
  to {
    visibility: hidden;
    opacity: 0;
  }
}

@keyframes fade-out {
  from {
    visibility: visible;
    opacity: 1;
  }
  99% {
    visibility: visible;
    opacity: 0;
  }
  to {
    visibility: hidden;
    opacity: 0;
  }
}

.fade-out {
  -webkit-animation: fade-out 300ms ease-in-out forwards;
  animation: fade-out 300ms ease-in-out forwards;
}

/*===========*\
  Hero
\*===========*/

/*===========*\
  Main
\*===========*/

.main-container {
  padding: 0 5%;
  background-color: hsl(220, 16%, 96%);
}

.main-info {
  padding: 20px 0;
}
.main-info h2 {
  padding: 10px 0;
  font-size: 28px;
  font-weight: 400;
}
.main-info p {
  color: hsl(233, 8%, 62%);
}

.main-cards-container {
  margin: 20px 0;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
}

.main-cards-container .main-card {
  margin: 5%;
}
.main-card .card-img {
  margin: 15px 0;
}
.main-card .card-title {
  margin: 15px 0;
  font-weight: 400;
}
.main-card .card-text {
  color: hsl(233, 8%, 62%);
}

@media screen and (max-width: 767px) {
  .main-info {
    padding: 10px 0;
  }
  .main-cards-container {
    margin: 10px 0;
    grid-template-columns: repeat(2, 1fr);
  }
  .main-card .card-img {
    margin: 5px 0;
  }
}
@media screen and (max-width: 375px) {
  p {
    font-size: 1.4rem;
  }
  .main-cards-container {
    grid-template-columns: 1fr;
  }
  .main-cards-container .main-card {
    margin: 0;
  }
  .main-card .card-img {
    position: relative;
    top: 0;
    left: 38%;
  }
  .main-card .card-title {
    margin: 5px 0;
  }
}

/*===========*\
  Articles
\*===========*/

/*===========*\
  Footer
\*===========*/

.footer {
  display: flex;
  max-width: 1440px; /*width 100%*/
  height: auto; /*150px*/
  background-color: hsl(233, 26%, 24%);
  flex-wrap: wrap;
}

.left-section-footer {
  /*border:1px solid;*/
  width: 250px;
  height: 148px;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
}

.logo-img {
  display: flex;
  justify-content: center;
  margin: 30px 0 50px 0;
  flex-wrap: wrap;
}

.social {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.social-link {
  display: inline-block;
  width: 20px;
  height: 20px;
  padding: 15px;
}

.social-link.facebook {
  background-image: url(../img/icon-facebook.svg);
  background-repeat: no-repeat;
}

.social-link.youtube {
  background-image: url(../img/icon-youtube.svg);
  background-repeat: no-repeat;
}

.social-link.twitter {
  background-image: url(../img/icon-twitter.svg);
  background-repeat: no-repeat;
}

.social-link.pinterest {
  background-image: url(../img/icon-pinterest.svg);
  background-repeat: no-repeat;
}

.social-link.instagram {
  background-image: url(../img/icon-instagram.svg);
  background-repeat: no-repeat;
}

.more-info {
  display: flex;
  width: 200;
  height: 148px;
  color: hsl(0, 0%, 100%);
  /*border: 1px solid;*/
  flex-wrap: wrap;
}

.more-info a {
  display: flex;
  margin-top: 15px;
  cursor: pointer;
}

.more-info a:hover {
  color: hsl(136, 65%, 51%);
}

.more-info1 {
  margin-left: 10px;
  margin-right: 65px;
  margin-top: 15px;
}

.more-info2 {
  margin-top: 15px;
}

.inv {
  margin-left: 450px;
  width: 300px;
  height: 148px;
  /*border: 1px solid #fff;*/
  color: hsl(0, 0%, 100%);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.inv button {
  font-size: 18px;
  width: 180px;
  height: 50px;
  background-color: hsl(136, 65%, 51%);
  border-radius: 50px;
  color: hsl(0, 0%, 100%);
  border: none;
  cursor: pointer;
  margin-bottom: 20px;
  flex-wrap: wrap;
}

.inv button:hover {
  background: #a8ff78; /* fallback for old browsers */
  background: -webkit-linear-gradient(
    to right,
    #78ffd6,
    #a8ff78
  ); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    to right,
    #78ffd6,
    #a8ff78
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  transition: background 3s;
  color: #2d314d;
}

@media screen and (max-width: 767px) {
  .left-section-footer {
    margin: 0 auto;
  }
  .more-info {
    margin: 0 auto;
  }
  .inv {
    margin: 0 auto;
  }
}

@media screen and (max-width: 375px) {
  .left-section-footer {
    margin: 0 auto;
  }
  .more-info {
    margin: 0 auto;
  }
  .inv {
    margin: 0 auto;
  }
}

